objects/Demo_Reservations__c.object
<CustomObject>
    <label>Demo Reservations</label>
    <nameField>
        <label>Reservation Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001Dm0sEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Out__c</fullName>
        <label>Date Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rec&apos;d Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Inventory__c</fullName>
        <label>Demo Inventory</label>
        <referenceTo>Field_Inventory__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>R00N30000001Dly3EAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Demo Reservations</relationshipLabel>
        <relationshipName>R00N30000001Dm0xEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Return_Date__c</fullName>
        <label>Expected Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Amount__c</fullName>
        <label>Total Opportunity Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>